--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ API_URL="https://openexchangerates.org/api/latest.json"
 KAFKA_BROKER="localhost:9092"
 KAFKA_TOPIC="currency_rates"
 API_KEY="3d40b4b15e7841dc83a075d7e26ace85"
+CRON_SCHEDULE=@hourly
