Removed .env file on github

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ KAFKA_BROKER="localhost:9092"
 KAFKA_TOPIC="currency_rates"
 API_KEY="3d40b4b15e7841dc83a075d7e26ace85"
 CRON_SCHEDULE=@hourly
+#Added
